attempt to fix DT-2001, spacing in ecom basket

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -604,6 +604,12 @@
 
 .summary-table .cell--image {
     max-width: 144px;
+    @media @mobile {
+        max-height: 170px;
+        img {
+            max-height: 150px;
+        }
+    }
 }
 
 .ecombasketsummary .summary-item-link {
